[project]
name = "A2Bot-next"
version = "0.1.0"
description = "A2Bot-next"
readme = "README.md"
requires-python = ">=3.9, <4.0"
dependencies = [
    "nonebot2[fastapi,httpx,websockets]>=2.4.4",
    "nonebot-adapter-onebot>=2.4.6",
    "pygtrie>=2.5.0",
    "win32-setctime>=1.2.0",
    "websockets>=15.0.1",
    "typing-extensions>=4.15.0",
    "pyyaml>=6.0.3",
    "python-dotenv>=1.2.1",
    "propcache>=0.4.1",
    "multidict>=6.7.0",
    "msgpack>=1.1.2",
    "idna>=3.11",
    "hyperframe>=6.1.0",
    "httptools>=0.7.1",
    "hpack>=4.1.0",
    "h11>=0.16.0",
    "colorama>=0.4.6",
    "certifi>=2026.1.4",
    "annotated-types>=0.7.0",
    "annotated-doc>=0.0.4",
    "yarl>=1.22.0",
    "typing-inspection>=0.4.2",
    "pydantic-core>=2.41.5",
    "loguru>=0.7.3",
    "httpcore>=1.0.9",
    "h2>=4.3.0",
    "exceptiongroup>=1.3.1",
    "click>=8.1.8",
    "anyio>=4.12.1",
    "watchfiles>=1.1.1",
    "uvicorn>=0.39.0",
    "starlette>=0.49.3",
    "pydantic>=2.12.5",
    "httpx>=0.28.1",
    "fastapi>=0.128.0",
    "curl-cffi>=0.13.0",
    "nonebot-plugin-apscheduler>=0.5.0",
]

[tool.nonebot]
plugin_dirs = []
builtin_plugins = []

[tool.nonebot.adapters]
nonebot-adapter-onebot = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
"@local" = []

[tool.nonebot.plugins]
"@local" = []
nonebot-plugin-apscheduler = ["nonebot_plugin_apscheduler"]
